@@ -1,20 +1,2 @@
-docs/
-pkg/
-Gemfile.lock
-Gemfile.local
-vendor/
-.vendor/
-spec/fixtures/manifests/
-spec/fixtures/modules/
-.vagrant/
-.bundle/
-.ruby-version
-coverage/
-log/
-.idea/
-.dependencies/
-.librarian/
-Puppetfile.lock
-*.iml
-.*.sw?
-.yardoc/
+/spec/acceptance/
+dist/
